--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
                 <td> </td>
                 <td><iframe src="https://www.youtube.com/embed/zX7UWavbT5g" width="600" height="400"></iframe></td>
                 <td><iframe src="https://www.youtube.com/embed/uHJyAZtRrOY" width="600" height="400"></iframe></td>
+                <td><iframe src="https://www.youtube.com/embed/MAiOAert8us" width="600" height="400"></iframe></td>
+                <td>4</td>
+            </tr>
+            <tr>
+                <td> </td>
+                <td><iframe src="https://www.youtube.com/embed/zX7UWavbT5g" width="600" height="400"></iframe></td>
+                <td><iframe src="https://www.youtube.com/embed/hcqRWDmFWTc" width="600" height="400"></iframe></td>
                 <td><iframe src="https://www.youtube.com/embed/" width="600" height="400"></iframe></td>
                 <td>4</td>
             </tr>
